--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body,
 /* Changed Background color for a better visual */
 body {
   font-family: sans-serif;
-  background-color: #5c6596;
+  background-color: #32386b;
 }
 
 .wrapper {
@@ -44,6 +44,10 @@ header {
   max-width: 800px;
   padding: 30px 40px;
   text-align: center;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
 }
 
 .card-header::after {
@@ -79,10 +83,9 @@ header {
 
 .btn {
   border: none;
-  background-color: hsl(0, 89%, 31%);
-  border-radius: 25px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
-    0px;
+  background-color: hsl(236, 34%, 48%);
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px    0px;
   color: hsl(0, 0%, 100%);
   display: inline-block;
   font-size: 22px;
@@ -91,6 +94,10 @@ header {
   padding: 14px 34px;
   text-align: center;
   cursor: pointer;
+  -webkit-border-radius:15px;
+  -moz-border-radius:15px;
+  -ms-border-radius:15px;
+  -o-border-radius:15px;
 }
 
 button[disabled] {
@@ -100,7 +107,7 @@ button[disabled] {
 
 /* Added hover on the button, to display when cursor is above the button to change the background color! */
 button:hover {
-  background-color: #ff0000;
+  background-color: rgb(116, 120, 180);
 }
 
 .float-right {
@@ -146,7 +153,7 @@ button:hover {
   }
 }
 
-/* Made the width of the input for number to 50px, now it is nice and neet :) */
+/* Made the width of the input for number to 50px, now it is nice and neat :) */
 input[type="number"] {
   width: 50px;
 }
